# my-nankai26C-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app_icon.rc  bullet.cpp  bullet.h  bullet_data.cpp  bullet_data.h  class_select_page.cpp  class_select_page.h  emoji_dungeon_combat_optimization_plan.md  emoji_dungeon_window.cpp  emoji_dungeon_window.h  enemy.cpp  enemy.h  enemy_data.cpp  enemy_data.h  game_data.h  game_factory.cpp  game_factory.h  game_main_page.cpp  game_main_page.h  main.cpp  player.cpp  player.h  resources.qrc  trait.cpp  trait.h  upgrade_page.cpp  upgrade_page.h  weapon.cpp  weapon.h  高级语言程序设计大作业实验报告_EmojiDungeon.docx
docs/: CHANGELOG_V2.md  CHANGELOG_V3.md  CODE_ANALYSIS.md  CODE_TYPE_ANALYSIS.md  README.md  V1到V2更新对比报告.md  V4_版本更新报告.md  项目代码分析报告.md  项目报告.md  项目文件功能说明.md  项目架构设计文档.md
resources/: resources.qrc
src/: CMakeLists.txt  bullet.h  bullet_data.h  class_select_page.cpp  class_select_page.h  emoji_dungeon_window.cpp  emoji_dungeon_window.h  enemy.h  enemy_data.h  game_data.h  game_factory.cpp  game_factory.h  game_main_page.cpp  game_main_page.h  main.cpp  player.h  resources.qrc  stage1_system_test.cpp  trait.h  upgrade_page.cpp  upgrade_page.h  wave_manager.h  weapon.h
src/bullets/: special_bullet_config.h  special_bullet_data.cpp  special_bullet_data.h  special_bullet_view.cpp  special_bullet_view.h
src/core/: combat_utils.cpp  combat_utils.h  game_data.h  game_enums.h  game_structs.h  game_tables.h
src/models/basic/: basic_bullet_data.cpp  basic_bullet_data.h  basic_enemy_data.cpp  basic_enemy_data.h  basic_player.cpp  basic_player.h  basic_trait.cpp  basic_trait.h  basic_weapon.cpp  basic_weapon.h
src/models/interfaces/: bullet_data.h  enemy_data.h  game_view.h  player.h  weapon.h
src/pages/: class_select_page.cpp  class_select_page.h  emoji_dungeon_window.cpp  emoji_dungeon_window.h  game_main_page.cpp  game_main_page.h  upgrade_page.cpp  upgrade_page.h
src/systems/: combat_coordinator.cpp  combat_coordinator.h  enemy_director.cpp  enemy_director.h  game_factory.cpp  game_factory.h  upgrade_resolver.cpp  upgrade_resolver.h  wave_manager.cpp  wave_manager.h
src/views/: basic_bullet_view.cpp  basic_bullet_view.h  basic_enemy_view.cpp  basic_enemy_view.h  battle_arena_view.cpp  battle_arena_view.h  dash_cooldown_widget.cpp  dash_cooldown_widget.h  player_avatar_item.cpp  player_avatar_item.h
tests/: stage1_system_test.cpp
